Segunda actividad grupo 7

--- a/primera_actividad/deployment.yml
+++ b/primera_actividad/deployment.yml
@@ -3,17 +3,24 @@ kind: Deployment
 metadata:
   name: web-app-deployment
 spec:
-  replicas: 3
+  # replicas: 3
   selector:
     matchLabels:
       app: web-app
   template:
     metadata:
       labels:
-        app: web-app
+        app: web-app    
     spec:
       containers:
       - name: web-app
         image: nigelpoulton/k8sbook:1.0
         ports:
         - containerPort: 8080
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "256Mi"
+          limits:
+            cpu: "200m"
+            memory: "512Mi"
